--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta content="" name="keywords"/>
     <meta content="webkit" name="renderer"/>
     <meta content="width=device-width,initial-scale=1.0,user-scalable=no" name="viewport">
-    <title>gc Launcher V3.3</title>
-    <link rel="icon" href="./src/assets/Ganyu.ico">
+    <title>Launcher v3.4</title>
+    <link rel="icon" href="/Ganyu.ico">
 
     <style>
         html, body, #app {
